# api/api.go
@@ -52,6 +52,9 @@ func New(opt *RouterOptions) *gin.Engine {
 	apiV1.POST("/posts", handlerV1.AuthMiddleware, handlerV1.CreatePost)
 	apiV1.GET("/posts", handlerV1.GetAllPosts)
 
+	apiV1.POST("/comments", handlerV1.AuthMiddleware, handlerV1.CreateComment)
+	apiV1.GET("/comments", handlerV1.GetAllComments)
+
 	apiV1.POST("/auth/register", handlerV1.Register)
 	apiV1.POST("/auth/verify", handlerV1.Verify)
 	apiV1.POST("/auth/login", handlerV1.Login)
